--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends "base.html" %}
+% extends "base.html" %}
 
 {% block content %}
     <h1>Создать пост</h1>
@@ -11,4 +11,4 @@
         <br>
         <button type="submit">Создать</button>
     </form>
-{% endblock %} {% endcomment %}
+{% endblock %}
